Revision history for POE-Quickie

{{$NEXT}}
    - Improve docs in a few places

0.05  Sat Jun 26 02:02:56 GMT 2010
    - Made 06_lazy.t a little less strict

0.04  Thu Jun 24 11:09:18 GMT 2010
    - Recreate our POE session in case it had run out of work and died

0.03  Thu Jun 24 01:33:27 GMT 2010
    - Fix a bug in the SYNOPSIS and improved the docs elsewhere as well

0.02  Thu Jun 24 01:21:17 GMT 2010
    - Renamed CopyINC to AltFork (like POE::Component::Generic and other
      modules call this feature) and made it croak if used on Win32
    - Make sure we have reaped the child process before we emit ExitEvent
    - Added an Capture::Tiny-like interface which "blocks" (while running
      other POE code) while executing programs
    - Replaced the shutdown() method with killall()

0.01  Wed Jun 23 13:30:10 GMT 2010
    - Initial release